# paper_romualdi_2022_icra_centroidal-mpc-walking

./: .gitpod.yml  CMakeLists.txt  README.md  file.yaml
.github/workflows/: docker.yaml
cmake/: AddCentroidalMPCWalkingApplication.cmake  InstallIniFiles.cmake
dockerfiles/: Dockerfile  centroidal-mpc.yml  conda-environment.yml  deps.sh  environment.yml  icub-models.patch
src/: CMakeLists.txt
src/centroidal-mpc-walking/: CMakeLists.txt
src/centroidal-mpc-walking/config/robots/iCubGazeboV3/: centroidal_mpc.ini  centroidal_mpc_walking.ini  contact_wrenches.ini  sensor_bridge.ini
src/centroidal-mpc-walking/config/robots/iCubGenova09/: centroidal_mpc.ini  centroidal_mpc_walking.ini  contact_wrenches.ini  ik.ini  legged_odometry.ini  sensor_bridge.ini
src/centroidal-mpc-walking/include/CentroidalMPCWalking/: CentroidalMPCBlock.h  Utilities.h  WholeBodyQPBlock.h
src/centroidal-mpc-walking/src/: CentroidalMPCBlock.cpp  Main.cpp  Utilities.cpp  WholeBodyQPBlock.cpp
worlds/: CMakeLists.txt
worlds/centroidal_mpc_icub3/: world
